--- a/RefactoringChallenge.Api/appsettings.json
+++ b/RefactoringChallenge.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Northwind;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=Northwind;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
